# rustchecker

./: Cargo.toml  README.md  sad
src/: checker.rs  main.rs  thread.rs
